Refactor: Some members use older JDK so getFirst method doesn't work, change getFirst -> get(0)